--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="fondo"><img src="fotos/fon.png" height="300%" width="100%" /></div>
     <div class="nombre"><h1>Parcial</h1></div>
     <div class="linea "></div>
-     <div class="im"><img src="fotos/f.png"height="700px" width="700px" /></div>
+     <div class="im"><img src="fotos/fo.png"height="700px" width="700px" /></div>
      <div class="t"><h1>Comentario :</h1></div>
      <div class="Comentario"><p>Los vectores me han parecido una Herramienta muy util para realizar diversos trabajps estos hacen que el trabajo se mas logico, aunque al principio me parecieron un poco dificiles pero poco a poco fui  comprendiendo mas su forma de uso. Son una herramienta util y aunque complicada  facil de entender cuando los practicas ya que todo va en la practica  .</p></div>
          
