--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="linea "></div>
      <div class="im"><img src="fotos/fo.png"height="1137 px" width="1440px" /></div>
      <div class="t"><h1>Comentario :</h1></div>
-     <div class="Comentario"><p>Los vectores me han parecido una Herramienta muy util para realizar diversos trabajps estos hacen que el trabajo se mas logico, aunque al principio me parecieron un poco dificiles pero poco a poco fui  comprendiendo mas su forma de uso. Son una herramienta util y aunque complicada  facil de entender cuando los practicas ya que todo va en la practica  .</p></div>
+     <div class="Comentario"><p>El parcial me parecio de gran ayuda pues me permitio reordar algunos temas que ya no tenia presente lo cual me llevo a indagar, me gusto que diera plazo hasta el domingo porque al inicio del ejercicio estaba algo enredada por falta de practica al final quede contenta con el objetivo logrado .</p></div>
          
          <div class="sat"><a href="https://saravanegas14.github.io/principal/"><img src="fotos/p.png"></a></div>
 
